wip - works with hardcoded token

--- a/index.html
+++ b/index.html
@@ -51,6 +51,11 @@
 
     <script src="./bower_components/ng-file-upload/ng-file-upload.min.js"></script>
 
+
+    <script src="./bower_components/print-js/src/index.d.ts"></script>
+
+    <script src="./node_modules/print-js/dist/print.js"></script>
+
     <!-- angular tables -->
     <link href="bower_components/angular-material-data-table/dist/md-data-table.min.css" rel="stylesheet" type="text/css" />
         <script type="text/javascript" src="bower_components/angular-material-data-table/dist/md-data-table.min.js"></script>
