--- a/app/src/flowchart/flowchart.html
+++ b/app/src/flowchart/flowchart.html
@@ -63,12 +63,21 @@
         text-decoration: underline;
     }
 
+    ng-include[src*="flowchart_navigation.html"] {
+        font-weight: bold;
+        position: sticky;
+        top: 150px;
+        z-index: 1;
+    }
+
     ng-include[src*="flowchart_headings.html"] {
         font-weight: bold;
         position: sticky;
-        top: 130px;
+        top: 220px;
         z-index: 1;
     }
+
+
 
     .flowchart-headers div[role="button"] {
         cursor: pointer;
