--- a/app/src/flowchart/data-row.html
+++ b/app/src/flowchart/data-row.html
@@ -1,12 +1,14 @@
 <a class="anchor" id="top_{{ i.node_uuid }}"></a>
 
-<md-card id="{{ i.node_uuid }}" ng-hide="!(vm.editperid == i.node_uuid) && vm.startedit">
+<md-card id="{{ i.node_uuid }}" ng-hide="!(vm.editperid == i.node_uuid) && vm.startedit" ng-style="(vm.idToMark == i.node_uuid) && {'background-color':'green'} || {'background-color': 'white'}"">
+
 <!--    <div class="card-content" style="background:red">-->
     <div class="card-content" >
 
 
 
-        <div layout="row">
+
+        <div layout="row" ng-click="vm.clickColor(i.node_uuid)">
             <div flex="15">{{i.creationDate | customFlowChartDate }} </div>
             <div flex="15">{{i.doctor  }}</div>
             <div flex="15">{{i.supervisingDoctor}}</div>
