--- a/app/src/flowchart/flowchart.html
+++ b/app/src/flowchart/flowchart.html
@@ -113,7 +113,8 @@
     }
 
     label {
-        color: #f00;
+        color: #98aeb8;
+        /*color: #f00;*/
     }
     input {
         display: none;
@@ -130,7 +131,8 @@
 
 
     input[type=checkbox]:checked + label {
-        color: #0f0;
+        color: #000000;
+        /*color: #0f0;*/
     }
 
 
