--- a/app/src/flowchart/data-row.html
+++ b/app/src/flowchart/data-row.html
@@ -1,6 +1,7 @@
 <a class="anchor" id="top_{{ i.node_uuid }}"></a>
 
-<md-card id="{{ i.node_uuid }}" ng-hide="!(vm.editperid == i.node_uuid) && vm.startedit" ng-style="(vm.idToMark == i.node_uuid) && {'background-color':'rgb(255,184,184)'} || {'background-color': 'white'}"">
+<md-card id="{{ i.node_uuid }}" ng-hide="!(vm.editperid == i.node_uuid) && vm.startedit" ng-style="(vm.idToMark == i.node_uuid) && {'background-color':'rgb(147,216,250)'} || {'background-color': 'white'}"">
+<!--<md-card id="{{ i.node_uuid }}" ng-hide="!(vm.editperid == i.node_uuid) && vm.startedit" ng-style="(vm.idToMark == i.node_uuid) && {'background-color':'rgb(255,184,184)'} || {'background-color': 'white'}"">-->
 
 <!--    <div class="card-content" style="background:red">-->
     <div class="card-content" >
