--- a/app/src/authorityMail/authorityMail.view.html
+++ b/app/src/authorityMail/authorityMail.view.html
@@ -37,8 +37,7 @@
                                  md-min-length="0"
                                  md-floating-label="Cc"
                                  md-clear-button="true"
-                                 md-require-match="false"
-                                 required>
+                                 md-require-match="false">
                     <md-item-template>
                         <span md-highlight-text="authoritySearch" md-highlight-flags="gi">{{authcc}}</span>
                     </md-item-template>
