--- a/app/src/declaration/advancedSearch/advancedSearch.view.html
+++ b/app/src/declaration/advancedSearch/advancedSearch.view.html
@@ -433,15 +433,15 @@
                     <md-input-container class="md-block">
                         <label>Psykologiske tests</label>
                         <md-select ng-model="searchParams.psyktests" ng-change="vm.pop()">
-                            <md-option ng-value="'1'" >Psykologisk undersøgelsestype</md-option>
-                            <md-option ng-value="'2'" >Psykiatriske interviews og ratingscales</md-option>
-                            <md-option ng-value="'3'" >Kognitive og neuropsykologiske præstationstests</md-option>
-                            <md-option ng-value="'4'" >Implicitte (projektive) tests</md-option>
-                            <md-option ng-value="'5'" >Eksplicitte (spørgeskema) tests</md-option>
-                            <md-option ng-value="'5'" >Instrumenter for indikation på malingering</md-option>
-                            <md-option ng-value="'5'" >Risikovurderingsinstrumenter</md-option>
-                            <md-option ng-value="'5'" >Psykologisk vurdering af forekomst af malingering</md-option>
-                            <md-option ng-value="'5'" >Konklusion på psykologisk undersøgelse</md-option>
+                            <md-option ng-value="'psykologisk_undersoegelsestype'" >Psykologisk undersøgelsestype</md-option>
+                            <md-option ng-value="'psykiatriske_interviews_og_ratingscales'" >Psykiatriske interviews og ratingscales</md-option>
+                            <md-option ng-value="'kognitive_og_neuropsykologiske_praestationstests'" >Kognitive og neuropsykologiske præstationstests</md-option>
+                            <md-option ng-value="'implicitte_projektive_tests'" >Implicitte (projektive) tests</md-option>
+                            <md-option ng-value="'eksplicitte_spoergeskema_tests'" >Eksplicitte (spørgeskema) tests</md-option>
+                            <md-option ng-value="'instrumenter_for_indikation_på_malingering'" >Instrumenter for indikation på malingering</md-option>
+                            <md-option ng-value="'risikovurderingsinstrumenter'" >Risikovurderingsinstrumenter</md-option>
+                            <md-option ng-value="'psykologisk_vurdering_af_forekomst_af_malingering'" >Psykologisk vurdering af forekomst af malingering</md-option>
+                            <md-option ng-value="'konklusion_tags'" >Konklusion på psykologisk undersøgelse</md-option>
                         </md-select>
                     </md-input-container>
 
