ready for ext test

--- a/app/src/declaration/advancedSearch/advancedSearch.view.html
+++ b/app/src/declaration/advancedSearch/advancedSearch.view.html
@@ -422,6 +422,24 @@
 
                             </md-card-content>
                     </md-card>
+
+                    <md-card flex>
+
+                    <md-card-content>
+
+                    <md-input-container class="md-block">
+                        <label>Fornavn</label>
+                        <input ng-model="searchParams.firstName" >
+                    </md-input-container>
+
+                    <md-input-container class="md-block">
+                        <label>Cpr</label>
+                        <input ng-model="searchParams.cpr" >
+                    </md-input-container>
+
+                    </md-card-content>
+                    </md-card>
+
                 </div>
 
             </div>
