--- a/app/src/system_settings/deleteobs/deleteobs.html
+++ b/app/src/system_settings/deleteobs/deleteobs.html
@@ -3,11 +3,11 @@
 
 
         <td md-input-container class="md-block" > <label>Sagsnr: </label>
-            <input ng-model="vm.chartAval" >
+            <input ng-model="vm.sagsnr" >
         </td >
 
         <td md-input-container class="md-block"><label>cpr: </label>
-            <input ng-model="vm.chartBval" >
+            <input ng-model="vm.cpr" >
         </td >
 
         <md-button ng-click="vm.verifyDataAndGetName()" >Slet Observand</md-button>
