--- a/app/src/declaration/advancedSearch/advancedSearch.view.html
+++ b/app/src/declaration/advancedSearch/advancedSearch.view.html
@@ -440,7 +440,7 @@
                             <md-option ng-value="'instrumenter_for_indikation_på_malingering'" >Instrumenter for indikation på malingering</md-option>
                             <md-option ng-value="'risikovurderingsinstrumenter'" >Risikovurderingsinstrumenter</md-option>
                             <md-option ng-value="'psykologisk_vurdering_af_forekomst_af_malingering'" >Psykologisk vurdering af forekomst af malingering</md-option>
-                            <md-option ng-value="'konklusion_tags'" >Konklusion på psykologisk undersøgelse</md-option>
+                            <md-option ng-value="'konklusion_tags'" >Standard formuleringer</md-option>
                         </md-select>
                     </md-input-container>
 
